--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <h4>This is useless</h4>
 
     <div class="status-text" id="statusTextCasaOS"></div>
-    <a class="btn" id="casaLink" href="http://arxaio-server.alefasnet.xyz:81" target="_blank">
+    <a class="btn" id="casaLink" href="http://hub.alefasnet.xyz:81" target="_blank">
       🌐 CasaOS
       <span class="status-badge" id="statusBadgeCasaOS">?</span>
     </a>
